--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Go go go!</a></li>
+                    <li><a href="#one" class="button next scrolly">Meet the team</a></li>
                 </ul>
             </div>
         </div>
@@ -37,11 +37,12 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>A catchy phrase</h2>
+                    <h2>About</h2>
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <!--<li><a href="landing.html" class="button next">Read more</a></li>-->
+                    <li><a class="button next">Read more</a></li>
                 </ul>
             </div>
         </section>
