--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
                 <p>{{ content }}</p>
                 <ul class="actions">
                     <!--<li><a href="landing.html" class="button next">Read more</a></li>-->
-                    <li><a class="button next">Read more</a></li>
+                    <li><a class="button next" href="details.html">Read more</a></li>
                 </ul>
             </div>
         </section>
